# pytest-swag

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-04-13-pytest-swag.md
docs/superpowers/specs/: 2026-04-13-pytest-swag-design.md
src/pytest_swag/: __init__.py  builder.py  collector.py  config.py  generator.py  infer.py  plugin.py  schema.py  validator.py
src/pytest_swag/adapters/: __init__.py  httpx.py  requests.py
src/pytest_swag/adapters/jsonapi/: __init__.py  httpx.py  mixin.py  query.py  requests.py  resource.py  schema.py  validation.py
tests/integration/: test_full_flow.py  test_plugin.py
tests/unit/: test_adapter_httpx.py  test_adapter_requests.py  test_builder.py  test_collector.py  test_config.py  test_generator.py  test_httpx_fixtures.py  test_infer.py  test_jsonapi_fixtures.py  test_jsonapi_generator.py  test_jsonapi_httpx.py  test_jsonapi_mixin.py  test_jsonapi_query.py  test_jsonapi_requests.py  test_jsonapi_resource.py  test_jsonapi_schema.py  test_jsonapi_validation.py  test_schema.py  test_validator.py
