[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-swag"
version = "0.2.0"
description = "Generate OpenAPI documentation from pytest tests"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "jwshin" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=7.0",
    "jsonschema>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
requests = ["requests>=2.20"]
dev = [
    "pyyaml>=6.0",
    "requests>=2.20",
    "ruff>=0.4",
]

[project.entry-points.pytest11]
swag = "pytest_swag.plugin"

[project.urls]
Homepage = "https://github.com/jwshin/pytest-swag"
Repository = "https://github.com/jwshin/pytest-swag"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_swag"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
